--- a/src/main/resources/application-k8s.properties
+++ b/src/main/resources/application-k8s.properties
@@ -1,14 +1,12 @@
-management.endpoints.web.exposure.include=*
-management.endpoint.shutdown.enabled=true
 server.port=5500
 
-# to run with postgres in the minikube cluster:
-spring.datasource.url=jdbc:postgresql://register-service:5432/users
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.security.oauth2.client.registration.spring.provider=spring
+spring.security.oauth2.client.registration.spring.client-id=gateway
+spring.security.oauth2.client.registration.spring.client-secret=secret
+spring.security.oauth2.client.registration.spring.client-authentication-method=client_secret_basic
+spring.security.oauth2.client.registration.spring.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.spring.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.spring.scope=user.read,user.write,openid
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-logging.level.de.cofinpro.codeshare=DEBUG
+spring.security.oauth2.client.provider.spring.issuer-uri=http://localhost:5050
+logging.level.org.springframework.security=trace
