artifact 0.1.0, capable of OIDC, gateway hub and user registration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 server.port=5500
+spring.datasource.url=jdbc:postgresql://localhost:5432/users
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 spring.security.oauth2.client.registration.spring.provider=spring
 spring.security.oauth2.client.registration.spring.client-id=gateway
@@ -7,6 +14,6 @@ spring.security.oauth2.client.registration.spring.client-authentication-method=c
 spring.security.oauth2.client.registration.spring.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.spring.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.spring.scope=user.read,user.write,openid
-
+spring.security.oauth2.authorizationserver.endpoint.oidc.logout-uri={baseUrl}/oidc/logout/{registrationId}
 spring.security.oauth2.client.provider.spring.issuer-uri=http://localhost:5050
 logging.level.org.springframework.security=trace
