make routes customizable & add postgres properties

--- a/src/main/resources/application-k8s.properties
+++ b/src/main/resources/application-k8s.properties
@@ -1,5 +1,12 @@
 server.port=5500
 
+spring.datasource.url=jdbc:postgresql://postgres-service:5432/users
+spring.datasource.username=postgres
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 spring.security.oauth2.client.registration.spring.provider=spring
 spring.security.oauth2.client.registration.spring.client-id=gateway
 spring.security.oauth2.client.registration.spring.client-secret=secret
@@ -8,5 +15,12 @@ spring.security.oauth2.client.registration.spring.authorization-grant-type=autho
 spring.security.oauth2.client.registration.spring.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.spring.scope=user.read,user.write,openid
 
-spring.security.oauth2.client.provider.spring.issuer-uri=http://localhost:5050
+spring.security.oauth2.client.provider.spring.issuer-uri=http://authorization-service:5050
 logging.level.org.springframework.security=trace
+logging.level.org.springframework.cloud.gateway=TRACE
+logging.level.org.springframework.http.server.reactive=DEBUG
+logging.level.org.springframework.web.reactive=DEBUG
+
+gateway.routes.recipe=http://recipe-service:9090/
+gateway.routes.code=http://code-sharing-service:9000/
+gateway.routes.quiz=http://quiz-engine-service:9009/
