--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=5500
+server.port=6600
 spring.datasource.url=jdbc:postgresql://localhost:5432/users
 spring.datasource.username=postgres
 spring.datasource.password=password
@@ -14,6 +14,13 @@ spring.security.oauth2.client.registration.spring.client-authentication-method=c
 spring.security.oauth2.client.registration.spring.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.spring.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.spring.scope=user.read,user.write,openid
-spring.security.oauth2.authorizationserver.endpoint.oidc.logout-uri={baseUrl}/oidc/logout/{registrationId}
-spring.security.oauth2.client.provider.spring.issuer-uri=http://localhost:5050
+
+spring.security.oauth2.client.provider.spring.issuer-uri=http://localhost:6060
 logging.level.org.springframework.security=trace
+logging.level.org.springframework.cloud.gateway=TRACE
+logging.level.org.springframework.http.server.reactive=DEBUG
+logging.level.org.springframework.web.reactive=DEBUG
+
+gateway.routes.recipe=http://localhost:8080/
+gateway.routes.code=http://localhost:9090/
+gateway.routes.quiz=http://localhost:9090/
