--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,4 +48,4 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@v2
       with:
-        arguments: build
+        arguments: check
