--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,21 @@ logging.level.org.springframework.cloud.gateway=TRACE
 gateway.routes.recipe=http://localhost:8080/
 gateway.routes.code=http://localhost:8090/
 gateway.routes.quiz=http://localhost:9090/
+
+spring.cloud.refresh.enabled=false
+spring.cloud.gateway.mvc.routes[0].id=recipe
+spring.cloud.gateway.mvc.routes[0].uri=http://localhost:8080/
+spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/recipe/**
+spring.cloud.gateway.mvc.routes[0].filters[0]=TokenRelay=
+spring.cloud.gateway.mvc.routes[0].filters[1]=PrefixPath=/api
+
+spring.cloud.gateway.mvc.routes[1].id=code
+spring.cloud.gateway.mvc.routes[1].uri=http://localhost:8090/
+spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/code/**
+spring.cloud.gateway.mvc.routes[1].filters[0]=TokenRelay=
+
+spring.cloud.gateway.mvc.routes[2].id=quiz
+spring.cloud.gateway.mvc.routes[2].uri=http://localhost:9090/
+spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/quiz/**
+spring.cloud.gateway.mvc.routes[2].filters[0]=TokenRelay=
+spring.cloud.gateway.mvc.routes[2].filters[1]=PrefixPath=/juergen/api
