opt out of refresh scope

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ gateway.routes.recipe=http://localhost:8080/
 gateway.routes.code=http://localhost:8090/
 gateway.routes.quiz=http://localhost:9090/
 
-#spring.cloud.refresh.enabled=false
+spring.cloud.refresh.enabled=false
 #spring.cloud.gateway.mvc.routes[0].id=recipe
 #spring.cloud.gateway.mvc.routes[0].uri=http://localhost:8080/
 #spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/recipe/**
