renovate - esp. native image

--- a/src/main/resources/application-k8s.properties
+++ b/src/main/resources/application-k8s.properties
@@ -21,3 +21,5 @@ logging.level.org.springframework.cloud.gateway=TRACE
 gateway.routes.recipe=http://recipe-service:9090/
 gateway.routes.code=http://code-sharing-service:9000/
 gateway.routes.quiz=http://quiz-engine-service:9009/
+
+spring.cloud.refresh.enabled=false
