--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,30 +23,13 @@ jobs:
         os: [ ubuntu-latest, self-hosted ]
     runs-on: ${{ matrix.os }}
 
-    services:
-      # Label used to access the service container
-      postgres:
-        # Docker Hub image
-        image: postgres:alpine
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          # Maps port 5432 on service container to the host
-          - 5432:5432
-        env:
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: userstest
-
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 21
+    - name: Set up JDK 22
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
-        distribution: 'temurin'
+        java-version: '22'
+        distribution: 'liberica'
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
     - name: Run Build with Gradle
