--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -57,5 +57,5 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: create-manifest
         run: |
-          docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/gateway:latest --amend ${{ secrets.DOCKERHUB_USERNAME }}/gateway:v0.2.1-amd64 --amend ${{ secrets.DOCKERHUB_USERNAME }}/gateway:v0.2.1-aarch64
+          docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/gateway:latest --amend ${{ secrets.DOCKERHUB_USERNAME }}/gateway:0.2.1-amd64 --amend ${{ secrets.DOCKERHUB_USERNAME }}/gateway:0.2.1-aarch64
           docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/gateway:latest
