--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -55,7 +55,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: retrieve image version tag
+        run: |
+          echo "version_tag=$(grep 'version = ' ./build.gradle.kts | awk -F'\"' '{print $2}')" >> "$GITHUB_ENV"
       - name: create-manifest
         run: |
-          docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/gateway:latest --amend ${{ secrets.DOCKERHUB_USERNAME }}/gateway:0.2.1-amd64 --amend ${{ secrets.DOCKERHUB_USERNAME }}/gateway:0.2.1-aarch64
+          docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/gateway:latest \
+          --amend ${{ secrets.DOCKERHUB_USERNAME }}/gateway:${version_tag}-amd64 \
+          --amend ${{ secrets.DOCKERHUB_USERNAME }}/gateway:${version_tag}-aarch64
           docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/gateway:latest
