--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,13 +41,13 @@ jobs:
     - name: Build native image
       run: ./gradlew bootBuildImage
 
-    - name: retrieve image infos
+    - name: Retrieve image infos
       id: image
       run: |
         echo "version_tag=$(grep 'version = ' ./build.gradle.kts | awk -F'\"' '{print $2}')" >> "$GITHUB_OUTPUT"
         echo "os_suffix=${{ matrix.os == 'ubuntu-latest' && 'amd64' || 'aarch64' }}" >> "$GITHUB_ENV"
 
-    - name: Log in to the Container registry
+    - name: Log in to DockerHub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -59,14 +59,14 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Login to DockerHub
+      - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: create-manifest
+      - name: Create Multi-architecture Manifest
         run: |
           docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/gateway:latest \
           --amend ${{ secrets.DOCKERHUB_USERNAME }}/gateway:${{ needs.build.outputs.version_tag }}-amd64 \
-          --amend ${{ secrets.DOCKERHUB_USERNAME }}/gateway:${{ needs.build.outputs.version_tag }}}-aarch64
+          --amend ${{ secrets.DOCKERHUB_USERNAME }}/gateway:${{ needs.build.outputs.version_tag }}-aarch64
           docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/gateway:latest
